boardstyles.css
/* ... */
	.slide-up {
		opacity: 0;
	}

	a {
		text-decoration: none;
		transition: color 200ms;
	}

	a, a:active, a:focus, textarea, input {
		outline: none;
	}

	/* Menu item flash animation on select */
	@keyframes menu-flash {
		0%, 24% { background-color: #dadaff; }
		25%, 49% { background-color: #fff; }
		50%, 74% { background-color: #dadaff; }
		75%, 99% { background-color: #fff; }
		100% { background-color: #dadaff; }
	}

	.menu-flashing {
		animation: menu-flash 0.4s steps(1, end);
	}

	tt {
		display: none;
	}

	/***/
	.no-user-select {
		-webkit-touch-callout: none;
		-webkit-user-select: none;
		-khtml-user-select: none;
		-moz-user-select: none;
		-ms-user-select: none;
		user-select: none;
	}

	/***/
	.clearfix:after,
	.board:after,
	.lists:after,
	.notes:after,
	.head:after,
	.board .menu:after,
	.list .menu:after {
		content: "";
		display: table;
		clear: both;
	}

	/***/
	body.dragging {
		-webkit-touch-callout: none;
		-webkit-user-select: none;
		-khtml-user-select: none;
		-moz-user-select: none;
		-ms-user-select: none;
		user-select: none;
	}

	/***/
	/* Header/Menubar from system7css */
	header{
		top: 0;
		left: 0;
		width: 100%;
		height: 20px;
		background-color: #000;
		line-height: 19px;
		z-index: 999;
		position: fixed;
		display: block;
	}

	header>.container{
		width: 100%;
		height: 19px;
		line-height: 19px;
		font-size: 10px;
		font-family: var(--ff);
		font-weight: bold;
		margin: 0;
		background-color: #fff;
		border-top-left-radius: 5px;
		border-top-right-radius: 5px;
	}

	header img.icon{
		height: 19px;
		width: 19px;
		vertical-align: middle;
	}

	header .menu{
		float: left;
		margin: 0 7px;
	}

	header .menu.right{
		float: right;
	}

	header .menu ul{
		padding: 0;
		margin: 0;
	}

	header .menu li{
		display: inline-block;
	}

	header .menu li>a{
		color: #000;
		padding: 0 7px;
		display: block;
		height: 19px;
		line-height: 19px;
	}

	header .menu li:hover>a {
		background-color: #000;
		color: #fff;
	}

	/* Push down text for non-icon menu items */
	header .menu li:not(:first-child) > a,
	header .menu.right li > a {
		padding-top: 2px;
		height: 17px;
	}

	header .menu li.disabled a{
		color: #848484;
	}

	/* Windows menu dropdown */
	header .menu li.windows-menu {
		position: relative;
	}

	header .menu li.windows-menu .boards-dropdown {
		display: none;
		position: absolute;
		top: 19px;
		left: 0;
		min-width: 200px;
		background-color: #fff;
		border: 1px solid #000;
		border-top: 1px solid #000;
		padding: 4px 0;
		z-index: 1000;
	}

	header .menu li.windows-menu:hover .boards-dropdown {
		display: block;
	}

	header .menu li.windows-menu .boards-dropdown a.load-board {
		display: block;
		padding: 2px 20px 2px 20px;
		color: #000;
		text-decoration: none;
		white-space: nowrap;
		font-size: 10px;
		font-weight: bold;
		position: relative;
		top: 0;
	}

	header .menu li.windows-menu .boards-dropdown a.load-board:hover {
		background-color: #dadaff;
		color: #000;
	}

	header .menu li.windows-menu .boards-dropdown a.load-board.active:before {
		content: '\2713 ';
		position: absolute;
		left: 7px;
	}

	/* File menu dropdown */
	header .menu li.file-menu {
		position: relative;
	}

	header .menu li.file-menu .file-dropdown {
		display: none;
		position: absolute;
		top: 19px;
		left: 0;
		min-width: 200px;
		background-color: #fff;
		border: 1px solid #000;
		border-top: 1px solid #000;
		padding: 4px 0;
		z-index: 1000;
	}

	header .menu li.file-menu:hover .file-dropdown {
		display: block;
	}

	header .menu li.file-menu .file-dropdown a {
		display: block;
		padding: 2px 20px;
		color: #000;
		text-decoration: none;
		white-space: nowrap;
		position: relative;
		cursor: pointer;
	}

	header .menu li.file-menu .file-dropdown a:hover {
		background-color: #dadaff;
		color: #000;
	}

	/* Edit menu dropdown */
	header .menu li.edit-menu {
		position: relative;
	}

	header .menu li.edit-menu .edit-dropdown {
		display: none;
		position: absolute;
		top: 19px;
		left: 0;
		min-width: 200px;
		background-color: #fff;
		border: 1px solid #000;
		border-top: 1px solid #000;
		padding: 4px 0;
		z-index: 1000;
	}

	header .menu li.edit-menu:hover .edit-dropdown {
		display: block;
	}

	header .menu li.edit-menu .edit-dropdown a {
		display: block;
		padding: 2px 20px;
		color: #000;
		text-decoration: none;
		white-space: nowrap;
		position: relative;
		cursor: pointer;
	}

	header .menu li.edit-menu .edit-dropdown a:hover {
		background-color: #dadaff;
		color: #000;
	}

	/* Menu dividers */
	.menu-divider {
		display: flex;
		align-items: center;
		justify-content: center;
		padding: 2px 0;
		height: 16px;
	}

	.menu-divider::after {
		content: '';
		display: block;
		width: 100%;
		height: 1px;
		background-color: #000;
	}

	/* Color menu dropdown */
	header .menu li.color-menu {
		position: relative;
	}

	header .menu li.color-menu .color-dropdown {
		display: none;
		position: absolute;
		top: 19px;
		left: 0;
		min-width: 200px;
		background-color: #fff;
		border: 1px solid #000;
		border-top: 1px solid #000;
		padding: 4px 0;
		z-index: 1000;
	}

	header .menu li.color-menu:hover .color-dropdown {
		display: block;
	}

	/* Don't show dropdown when disabled */
	header .menu li.color-menu.disabled:hover .color-dropdown {
		display: none;
	}

	header .menu li.color-menu .color-dropdown a {
		display: block;
		padding: 2px 20px;
		color: #000;
		text-decoration: none;
		white-space: nowrap;
		position: relative;
		cursor: pointer;
	}

	header .menu li.color-menu .color-dropdown a:hover {
		background-color: #dadaff;
		color: #000;
	}

	header .menu li.color-menu .color-dropdown a.active:before {
		content: '\2713 ';
		position: absolute;
		left: 7px;
	}

	/* Color swatches in menu */
	.color-swatch {
		display: inline-block;
		width: 19px;
		height: 12px;
		margin-right: 8px;
		vertical-align: middle;
		border: 1px solid;
	}

	.color-swatch[data-color='yellow'] {
		background-color: #ffffb4;
		border-color: #ffda03;
	}
/* ... */

